a1/brendan_gordon/TEST_PROGRAMS/invalidtype/stefan_knudsen/doubleDec.min
var a : int;
var n : int;
var a : string;

